# NUbots

./: .Doxyfile  .clang-format  .clang-tidy  .cmake-format.py  .devcontainer.json  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .licence.tmpl  .prettierrc  .style.yapf  .travis.yml  Action_8hpp_source.html  AlignBallToGoal_8hpp_source.html  AllRounder_8hpp_source.html  Attack_8hpp_source.html  Balance_8hpp_source.html  BallDetector_8hpp_source.html  BallFilter_2src_2BallModel_8hpp_source.html  BallFilter_8hpp_source.html  BallLocalisation_2src_2BallModel_8hpp_source.html  BallLocalisation_8hpp_source.html  BallModel_8hpp_source.html  Behaviour_8hpp_source.html  BulkRead_8hpp_source.html  BulkWrite_8hpp_source.html  CLAUDE.md  CM740Data_8hpp_source.html  CM740Interface_8hpp_source.html  CM740_8hpp_source.html  CMakeLists.txt  CNAME  CameraContext_8hpp_source.html  Camera_8hpp_source.html  Combination_8hpp_source.html  CompressionContext_8hpp_source.html  CompressorFactory_8hpp_source.html  Compressor_8hpp_source.html  (+4679 more)
hats/: CMakeLists.txt  scriptrunner.cpp  scripttuner.cpp
lib/jpge/: CMakeLists.txt
lib/jpge/src/: jpge.cpp
lib/jsmn/: CMakeLists.txt
lib/jsmn/include/: jsmn.h
message/: CMakeLists.txt  EnhancedMessages.cmake  Neutron.cmake  build_message_class.py  build_outer_python_binding.py
message/generator/: Enum.py  Field.py  File.py  Message.py
message/proto/: Matrix.proto  Neutron.proto  Vector.proto
module/: CMakeLists.txt  NUClearModule.cmake
module/GameControllerSimulator/: README.md
module/PlanLook/: README.md
module/TestModule/: README.md
module/adder/: README.md
module/checker/: README.md
module/python/: nuclear.py
module/starter/: README.md
modules/AudioInput/: CMakeLists.txt  README.md
modules/ConfigSystem/: CMakeLists.txt  README.md
modules/DarwinMotors/: CMakeLists.txt
modules/eSpeak/: CMakeLists.txt  README.md
nuclear/: .cmake-format.py  CMakeLists.txt  README.md  b  b.py  dependencies.py  requirements.txt
nuclear/cmake/: CompilerWarnings.cmake
nuclear/extension/: CMakeLists.txt  NUClearExtension.cmake  extension.cpp
nuclear/message/: CMakeLists.txt  EnhancedMessages.cmake  Neutron.cmake  StandardMessages.cmake  build_message_class.py  build_message_reflection.py  build_outer_python_binding.py  generate_python_messages.py  message.cpp  repackage_message.py
nuclear/module/: CMakeLists.txt  NUClearModule.cmake
nuclear/roles/: CMakeLists.txt  ListAllModules.cmake  NUClearRole.cmake  banner.txt  generate_role.py
nuclear/tests/: CMakeLists.txt  test.cpp
nuclear/tools/: module.py
nuclear/utility/: CMakeLists.txt  NUClearUtility.cmake  utility.cpp
report/: CMakeLists.txt  footer.tex  header.tex
report/graph/: CMakeLists.txt  blackboard_info.py  build_role_graph.py  cxx_demangle.cpp  demangle.cpp  extract_nuclear_info.py  json_to_graph.py
roles/: .cmake-format.py  CMakeLists.txt  NUClearRole.cmake  ScriptRunnerButton.role  all_modules.role  armapftest.role  armaukftest.role  autoclassifier.role  balllocalisation.role  bodylessvision.role  calibrateimu.role  cameratest.role  chaseball.role  classifiertester.role  compressortest.role  configsystemtest.role  dabsontest.role  dancedarwin.role  deadline.role  demo.role  directorkeyboardwalk.role  directorps3walk.role  directorrobocup.role  directorscriptruner.role  directorscripttuner.role  directortest.role  displaytest.role  dopetest.role  extrinsicscalibration.role  fakeballsim.role  fakeps3walk.role  fakewalk.role  featuredetectorpc.role  featuredetectortester.role  filter_playback.role  filter_test.role  firmwareinstaller.role  footsteptest.role  fusionfilter.role  gamecontrollertest.role  (+138 more)
roles/banner/: bigtext.py
roles/data/: logging.role  playback.role
roles/fake/: keyboardwalk.role  visualmesh.role
roles/mujoco/: keyboardwalk.role  mujoco.role  rl_keyboardwalk.role
roles/test/: LLM.role  balllocalisation.role  behaviour.role  camera.role  director.role  directormotion.role  featuredetector.role  filter.role  gamecontroller.role  headbeh.role  localisation.role  lookatball.role  lyrics2logs.role  messageloghandler.role  nusense.role  nusight.role  obtask.role  onboarding.role  plotjuggler.role  rerun.role  robocup.role  robotcommunication.role  sensor-openCR.role  sensor.role  servo-sensor-map.role  speak.role  stella.role  uncertainty_reset.role  unused.role  visualmesh.role  vslam.role  whistle.role  yolo.role
roles/webots/: LLM.role  Speak.role  behaviour.role  calibrateimu.role  demo.role  directorkeyboardwalk.role  directormotion.role  directorrobocup.role  directorscripttuner.role  keyboardneuralwalk.role  keyboardwalk.role  localisation.role  localisation_benchmark.role  logging.role  lookatball.role  matlab.role  mujoco.role  odometry_benchmark.role  odometry_data_collection.role  onboarding.role  penaltyshootout.role  rl_armswing.role  rl_keyboardwalk.role  robocup.role  scripttuner.role  segmentation.role  train_rl.role  train_rl_test.role  voronoi.role  vslam.role  walkoptimisation.role  webots.role  yolo.role
shared/clock/: CMakeLists.txt  clock.cpp  clock.hpp
shared/messages/: Beat.h  BeatLocations.h  CMakeLists.txt  CameraSettings.cpp  CameraSettings.h  Configuration.h  ConfigurationNode.h  DarwinMotors.h  DarwinSensors.cpp  DarwinSensors.h  DarwinServoCommand.h  DarwinServos.h  Example.proto  ExecuteScript.h  Geometry.proto  Global.proto  Image.cpp  Image.h  Matrix.proto  NUAPI.proto  NUAPI.proto~  NUImage.cpp  NUImage.h  NUbuggerData.h  NUbuggerDataPoint.h  NetSpeak.proto  OptimizeScript.proto  OptimizeScriptResult.proto  Parameter.cpp  Parameter.h  Pixel.h  PlainMessage.h  Say.h  Script.h  SegmentationFault.h  ServoWaypoint.h  SoundChunk.h  TestMessage.proto  Vector.proto
shared/tests/: CMakeLists.txt
shared/utility/: .gitignore  CMakeLists.txt  ConfigureUtilities.cmake  ExampleParentCMakeLists.txt  GetNUtilities.cmake  README.md  libraries.cmake  random.cpp  random.hpp
utility/: CMakeLists.txt  README.md  utility.cpp
utility/image/: RGB.h
utility/kdtree/: kdtree.h
utility/strutil/: banner.h
(+7944 files in other folders)
